css/mobile.css
nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    --nav-height: 130px;
}

nav .wrapper {
    max-width: 100%;
    padding-top: 1rem;
}

nav ul {
    max-width: 100%;
    padding: 0;
    position: absolute;
    bottom: 10px;
}

nav li {
    font-size: 1rem;
    margin-top: 0.25rem;
}

#showcase-img,
.overlay {
    height: 50vh;
}

#showcase h1 {
    font-size: 4rem;
}

#showcase p {
    letter-spacing: normal;
    font-size: 2.5rem;
}

#services {
    flex-direction: column;
    padding: 0;
}

#services-page {
    margin-left: 5rem;
}

#services h2 {
    text-align: center;
}

#services-page div:first-child {
    margin-left: 0;
}

#services div:first-child {
    width: 75%;
}

#services div:nth-child(2) {
    justify-content: center;
    margin: 0;
    padding-top: 0;
}

#services div {
    margin: auto;
    padding: 5rem 0;
}

#first-div {
    margin: 5rem 5rem 0 5rem;
}

#second-div {
    margin: 3rem 5rem 5rem 5rem;
}

.underline {
    background: none;
}

#about {
    width: 75%;
    padding: 6rem 0;
    margin: auto;
}

#about h2 {
    text-align: center;
}

#about div {
    width: 100%;
    margin: auto;
    text-align: center;
}

#about a {
    margin-right: 0;
}

#bio-footer {
    margin-top: 800px;
}

#bio p {
    padding-left: 5rem;
    padding-right: 5rem;
}

#contact-page-spacing {
    height: 0rem;
}

#contact {
    height: 100vh;
}

.footer p {
    padding: 0.05rem 0;
    font-size: 0.65rem;
}

@media(max-width: 1000px) {
    #showcase p {
        font-size: 2rem;
    }
    #showcase h1 {
        font-size: 3rem;
        justify-self: flex-start;
    }
    #showcase p {
        font-size: 1.5rem;
    }
    #services {
        display: flex;
        flex-direction: column;
    }
    #services h2 {
        justify-self: center;
        align-self: center;
        padding-top: 1rem;
    }
    #management,
    #gas,
    #writing {
        margin-bottom: 3rem;
    }
    #services div:nth-child(2) {
        order: 1;
    }
    #services-page h2,
    #projects h2,
    #bio h2 {
        font-size: 3rem;
        text-align: left;
    }
    #services-page div:nth-child(2),
    #services-page div:nth-child(3) {
        flex-direction: column;
        margin-left: 0;
    }
    #services-list {
        display: none;
    }
    #projects {
        margin: 5rem;
    }
    #projects h2 {
        padding-bottom: 3rem;
    }
    #projects p {
        text-align: start;
    }
    .footer {
        height: 100px;
        display: flex;
        flex-direction: column;
    }
    .footer p:nth-child(even) {
        display: none;
    }
    @media(max-width: 630px) {
        #navbar {
            --nav-height: 110px;
        }
        #navbar h1 {
            font-size: 1rem;
        }
        #navbar p,
        #navbar a {
            font-size: 0.8rem;
        }
        #showcase h1 {
            font-size: 2.5rem;
        }
        #showcase p {
            font-size: 1.2rem;
        }
        #showcase .btn {
            font-size: 0.5rem;
            padding-left: 0.75rem;
            padding-right: 0.75rem;
            margin-left: 1rem;
            margin-bottom: 0.5rem;
        }
        #services-page h2 {
            font-size: 3rem;
        }
        #contact h3 {
            font-size: 3rem;
        }
        #projects {
            margin: -2rem 4rem 5rem 4rem;
        }
        @media(max-width: 510px) {
            h2 {
                text-align: left;
            }
            #navbar #title {
                padding-left: 0.5rem;
            }
            #navbar h1 {
                font-size: 0.9rem;
            }
            #navbar p {
                padding-top: 0.3rem;
                font-size: 0.5rem;
            }
            #navbar a {
                font-size: 0.7rem;
            }
            #navbar ul {
                padding-left: 0.5rem;
            }
            #navbar li {
                padding: 0 0.1rem;
            }
            #showcase h1 {
                padding: 0 0 0.5rem 0.25rem;
                font-size: 2rem;
            }
            #showcase p {
                padding-right: 0.15rem;
                font-size: 0.8rem;
                font-weight: bold;
            }
            #services h2,
            #about h2 {
                font-size: 3rem;
                text-align: left;
            }
            #about div {
                margin: 0;
                text-align: left;
                width: 100vw;
            }
            #projects p {
                padding-bottom: 5rem;
            }
            #bio {
                height: 120vh;
            }
            @media(max-width: 450px) {
                #navbar {
                    --nav-height: 100px;
                }
                #navbar .wrapper {
                    padding: 1rem 0 0.2rem 0;
                }
                #navbar h1 {
                    font-size: 0.75rem;
                }
                #showcase h1 {
                    padding: 0 0 0.3rem 0.25rem;
                    font-size: 1.5rem;
                }
                #showcase p {
                    padding-right: 0.25rem;
                    font-size: 0.7rem;
                }
                #services-page h2 {
                    font-size: 2.25rem;
                }
                #services-page h4 {
                    font-size: 1.5rem;
                }
                i {
                    font-size: 5rem;
                }
                #services h3 {
                    font-size: 1.5rem;
                }
                #services div:nth-child(2):hover i {
                    font-size: 6rem;
                }
                #services div:nth-child(2):hover h3 {
                    font-size: 1.75rem;
                }
                #bio p {
                    padding-left: 3rem;
                    padding-right: 3rem;
                }
                #projects {
                    margin: 3rem 3rem 10rem 2rem;
                }
                #projects h2 {
                    padding-bottom: 2rem;
                }
                #projects h4 {
                    font-size: 1.4rem;
                }
                #contact input,
                #contact textarea {
                    width: 100%;
                    margin-bottom: 1rem;
                }
                #contact .btn {
                    margin: 1rem auto;
                }
                .footer p {
                    padding: 0;
                    text-align: center;
                    font-size: 0.6rem;
                }
            }
        }
    }
}

